--- a/index.html
+++ b/index.html
@@ -10,22 +10,46 @@
 
 <body>
 
-  <header></header>
+  <header>
+    <div class="conteiner clearfix">
+      <div class="logo">
+        <a class="link-homepage-logo" href="#">
+          <img src="img/logo.svg" alt="Logo Discord">
+        </a>
+      </div>
+      <nav class="menu-home">
+        <ul>
+          <li><a href="#">Scarica</a></li>
+          <li><a href="#">Perchè Discord</a></li>
+          <li><a href="#">Nitro</a></li>
+          <li><a href="#">Sicurezza</a></li>
+          <li><a href="#">Assistenza</a></li>
+        </ul>
+      </nav>
+      <div class="btn-header"><a href="#" class="btn">Accedi</a></div>
+    </div>
+  </header>
 
-  <div class="jumbotron"></div>
+  <div class="jumbotron">
+    <div class="conteiner"></div>
+  </div>
 
   <main>
-    <div class="horizontal-sections">
-      <section class="horizontal-section-one"></section>
-      <section class="horizontal.section-two"></section>
-      <section class="horizontal.section-three"></section>
+    <div class="conteiner">
+      <div class="horizontal-sections">
+        <section class="horizontal-section-one"></section>
+        <section class="horizontal.section-two"></section>
+        <section class="horizontal.section-three"></section>
+      </div>
+      <div class="vertical-sections">
+        <div class="vertical-section-one"></div>
+        <div class="vertical-section-two"></div>
+      </div>
     </div>
-    <div class="vertical-sections">
-      <div class="vertical-section-one"></div>
-      <div class="vertical-section-two"></div>
-    </div>
+  </main>
 
-    <footer>
+  <footer>
+    <div class="conteiner">
       <div class="footer-top">
         <div class="contact-social-area"></div>
         <div class="navigation-area-footer">
@@ -36,8 +60,8 @@
         </div>
         <div class="footer-bottom"></div>
       </div>
-    </footer>
-  </main>
+    </div>
+  </footer>
   
 </body>
 </html>
