--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Discord HP replica</title>
 </head>
 
@@ -31,7 +32,16 @@
   </header>
 
   <div class="jumbotron">
-    <div class="conteiner"></div>
+    <div class="conteiner area-text-jumbotron">
+      <h1 class="title-jumbotron">Il tuo posto per parlare</h1>
+      <p class="text-jumbotron">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente  di un gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
+      <div class="btn-jumbotron">
+        <a href="#" class="btn">
+          <i class="fa-solid fa-down-long"></i>
+          Scarica per Mac</a>
+        <a href="#" class="btn btn-black">Apri Discord nel tuo brower</a>
+      </div>
+    </div>
   </div>
 
   <main>
