prima section-horizontal main

--- a/index.html
+++ b/index.html
@@ -45,17 +45,33 @@
   </div>
 
   <main>
-    <div class="conteiner">
+    <!-- <div class="conteiner"> -->
+
+<!-- ----sezioni orizzontali ondulate---- -->
       <div class="horizontal-sections">
-        <section class="horizontal-section-one"></section>
-        <section class="horizontal.section-two"></section>
-        <section class="horizontal.section-three"></section>
+
+        <section class="horizontal-section section-white">
+          <div class="conteiner clearfix">
+            <div class="img-horizontal-section">
+              <img src="img/item1.svg" alt="">
+            </div>
+            <div class="text-horizontal-section">
+              <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+              <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemnte parlare della tua giornata senza intasare una chat di gruppo</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="horizontal-section section-grey clearfix"></section>
+
+        <section class="horizontal-section section-white clearfix"></section>
+
       </div>
-      <div class="vertical-sections">
+
+      <div class="vertical-sections section-white">
         <div class="vertical-section-one"></div>
         <div class="vertical-section-two"></div>
       </div>
-    </div>
   </main>
 
   <footer>
