duplicazione horizontal section main

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="horizontal-sections">
 
         <section class="horizontal-section section-white">
-          <div class="conteiner clearfix">
+          <div class="row-white conteiner clearfix">
             <div class="img-horizontal-section">
               <img src="img/item1.svg" alt="">
             </div>
@@ -61,11 +61,28 @@
             </div>
           </div>
         </section>
-
-        <section class="horizontal-section section-grey clearfix"></section>
-
-        <section class="horizontal-section section-white clearfix"></section>
-
+        <section class="horizontal-section section-grey">
+          <div class="row-grey conteiner clearfix">
+            <div class="text-horizontal-section">
+              <h2>Dove trovarsi è facile</h2>
+              <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare</p>
+            </div>
+            <div class="img-horizontal-section">
+              <img src="img/item2.svg" alt="">
+            </div>
+          </div>
+        </section>
+        <section class="horizontal-section section-white">
+          <div class="row-white conteiner clearfix">
+            <div class="img-horizontal-section">
+              <img src="img/item3.svg" alt="">
+            </div>
+            <div class="text-horizontal-section">
+              <h2>Da pochi a un fandom</h2>
+              <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai menbri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
+          </div>
+        </section>
       </div>
 
       <div class="vertical-sections section-white">
