--- a/index.html
+++ b/index.html
@@ -85,8 +85,14 @@
         </section>
       </div>
 
-      <div class="vertical-sections section-white">
-        <div class="vertical-section-one"></div>
+      <div class="vertical-sections section-grey conteiner">
+        <div class="vertical-section-one">
+          <h2>Tecnologia affidabile per tenersi in contatto</h2>
+          <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione dello schermo.</p>
+        </div>
+        <div class="img-vertical-section">
+          <img src="img/item4-big.svg" alt="">
+        </div>
         <div class="vertical-section-two"></div>
       </div>
   </main>
