--- a/index.html
+++ b/index.html
@@ -85,15 +85,22 @@
         </section>
       </div>
 
-      <div class="vertical-sections section-grey conteiner">
-        <div class="vertical-section-one">
+      <div class="vertical-sections section-grey ">
+        <div class="vertical-section-one conteiner">
           <h2>Tecnologia affidabile per tenersi in contatto</h2>
           <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione dello schermo.</p>
         </div>
-        <div class="img-vertical-section">
+        <div class="img-vertical-section conteiner">
           <img src="img/item4-big.svg" alt="">
         </div>
-        <div class="vertical-section-two"></div>
+        <div class="vertical-section-two conteiner">
+          <h2>Pronto a iniziare la tua avventura?</h2>
+          <img src="img/stars.svg" alt="">
+          <div class="btn-main-bottom">
+            <a href="#" class="btn btn-blue">
+              <i class="fa-solid fa-down-long"></i>
+              Scarica per Mac</a>
+          </div>
       </div>
   </main>
 
