--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="text-jumbotron">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente  di un gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
       <div class="btn-jumbotron">
         <a href="#" class="btn">
-          <i class="fa-solid fa-down-long"></i>
+          <i class="freccia" class="fa-solid fa-down-long"></i>
           Scarica per Mac</a>
         <a href="#" class="btn btn-black">Apri Discord nel tuo brower</a>
       </div>
@@ -106,15 +106,82 @@
 
   <footer>
     <div class="conteiner">
-      <div class="footer-top">
-        <div class="contact-social-area"></div>
-        <div class="navigation-area-footer">
-          <div class="cln-one"></div>
-          <div class="cln-two"></div>
-          <div class="cln-three"></div>
-          <cln class="four"></cln>
+      <div class="footer-top clearfix">
+        <div class="contact-social-area">
+          <h3>Il tuo posto per parlare</h3>
+          <div class="selection-lenguage clearfix">
+            <img src="img/ita.png" alt="Bandiera italiana">
+            <p>Italiano</p>
+            <a id="freccia-in-giù" href="#">
+              <i class="fa-solid fa-angle-down"></i>
+            </a>
+          </div>
+          <div class="social-icons-footer">
+            <a href="#"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" class="twitter-logo svg-inline--fa fa-twitter" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M459.4 151.7c.325 4.548 .325 9.097 .325 13.65 0 138.7-105.6 298.6-298.6 298.6-59.45 0-114.7-17.22-161.1-47.11 8.447 .974 16.57 1.299 25.34 1.299 49.06 0 94.21-16.57 130.3-44.83-46.13-.975-84.79-31.19-98.11-72.77 6.498 .974 12.99 1.624 19.82 1.624 9.421 0 18.84-1.3 27.61-3.573-48.08-9.747-84.14-51.98-84.14-102.1v-1.299c13.97 7.797 30.21 12.67 47.43 13.32-28.26-18.84-46.78-51.01-46.78-87.39 0-19.49 5.197-37.36 14.29-52.95 51.65 63.67 129.3 105.3 216.4 109.8-1.624-7.797-2.599-15.92-2.599-24.04 0-57.83 46.78-104.9 104.9-104.9 30.21 0 57.5 12.67 76.67 33.14 23.72-4.548 46.46-13.32 66.6-25.34-7.798 24.37-24.37 44.83-46.13 57.83 21.12-2.273 41.58-8.122 60.43-16.24-14.29 20.79-32.16 39.31-52.63 54.25z"></path></svg></a>
+            <a href="#"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" class="instagram-logo svg-inline--fa fa-instagram" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg></a>
+            <a href="#"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook-square" class="facebook-logo svg-inline--fa fa-facebook-square" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.3V327.7h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0 -48-48z"></path></svg></a>
+            <a href="#"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="youtube" class="youtube-logo svg-inline--fa fa-youtube" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M549.7 124.1c-6.281-23.65-24.79-42.28-48.28-48.6C458.8 64 288 64 288 64S117.2 64 74.63 75.49c-23.5 6.322-42 24.95-48.28 48.6-11.41 42.87-11.41 132.3-11.41 132.3s0 89.44 11.41 132.3c6.281 23.65 24.79 41.5 48.28 47.82C117.2 448 288 448 288 448s170.8 0 213.4-11.49c23.5-6.321 42-24.17 48.28-47.82 11.41-42.87 11.41-132.3 11.41-132.3s0-89.44-11.41-132.3zm-317.5 213.5V175.2l142.7 81.21-142.7 81.2z"></path></svg></a>
+
+          </div>
         </div>
-        <div class="footer-bottom"></div>
+        <div class="menu-home navigation-area-footer clearfix">
+          <div class="cln cln-one">
+            <ul>
+              <li><a class="title-menu-footer" href="#">Prodotto</a></li>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perchè Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </div>
+          <div class="cln cln-two">
+            <ul>
+              <li><a class="title-menu-footer" href="#">Compagnia</a></li>
+              <li><a href="#">Chi siamo</a></li>
+              <li><a href="#">Lavora con noi</a></li>
+              <li><a href="#">Marchio</a></li>
+              <li><a href="#">Redazione</a></li>
+              <li><a href="#">Negozio</a></li>
+            </ul>
+          </div>
+          <div class="cln cln-three">
+            <ul>
+              <li><a class="title-menu-footer" href="#">Risorse</a></li>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perchè Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perchè Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </div>
+          <cln class="cln cln-four">
+            <ul>
+              <li><a class="title-menu-footer" href="#">Norme</a></li>
+              <li><a href="#">Scarica</a></li>
+              <li><a href="#">Perchè Discord</a></li>
+              <li><a href="#">Nitro</a></li>
+              <li><a href="#">Sicurezza</a></li>
+              <li><a href="#">Assistenza</a></li>
+            </ul>
+          </cln>
+        </div>
+      </div>
+      <div class="footer-bottom clearfix">
+        <div class="logo">
+          <a class="link-homepage-logo" href="#">
+            <img src="img/logo.svg" alt="Logo Discord">
+          </a>
+        </div>
+        <div class="footer-bottom-blue">
+          <a href="#" class="btn btn-blue">Registrati</a>
+        </div>
       </div>
     </div>
   </footer>
