ripristino freccia bottone

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="text-jumbotron">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente  di un gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
       <div class="btn-jumbotron">
         <a href="#" class="btn">
-          <i class="freccia" class="fa-solid fa-down-long"></i>
+          <i class="fa-solid fa-down-long"></i>
           Scarica per Mac</a>
         <a href="#" class="btn btn-black">Apri Discord nel tuo brower</a>
       </div>
